<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="app_hint">Informe a altura (em metros) e o peso (em quilogramas) da pessoa</string>
    <string name="tv_altura">"Altura:"</string>
    <string name="hint_altura">metros</string>
    <string name="tv_peso">"Peso:"</string>
    <string name="hint_peso">quilogramas</string>
    <string name="app_hint2">Selecione o gênero e clique em \'Calcular\'</string>
    <string name="rbMasc">Masculino</string>
    <string name="rbFem">Feminino</string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnLimpar">Limpar</string>
    <string name="btnPesoIdeal">Peso Ideal</string>
    <string name="gender_error">Por favor, selecione um gênero!</string>
    <string name="altura_error">Altura inválida!</string>
    <string name="peso_error">Peso inválido!</string>
    <string name="campos_limpos">Campos limpos!</string>
    <string name="dlog_title">Peso Ideal</string>
    <string name="imc_abaixo_peso">Abaixo do Peso</string>
    <string name="imc_peso_ideal">Peso Ideal</string>
    <string name="imc_pouco_acima_peso">Pouco acima do Peso</string>
    <string name="imc_acima_peso">Acima do Peso</string>
    <string name="imc_obesidade">Obesidade</string>
    <string name="peso_ideal_text">Seu peso ideal é entre %.2f Kg e %.2f Kg</string>
</resources>