<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:text="@string/app_hint"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="40sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80sp"
            android:text="@string/tv_altura"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_altura"
            android:inputType="text"
            android:minWidth="280sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="40sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80sp"
            android:text="@string/tv_peso"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_peso"
            android:inputType="text"
            android:minWidth="280sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/app_hint2"
        android:textAlignment="center"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/rbMasc"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbFeminino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/rbFem"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="15sp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/btnCalcular"
            android:onClick="calcular"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="@string/btnLimpar"
            android:onClick="limpar"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnPesoIdeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10sp"
        android:visibility="invisible"
        android:text="@string/btnPesoIdeal"
        android:onClick="pesoIdeal"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20sp">

        <TextView
            android:id="@+id/imc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/situacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>